[package]
name = "tracyrs"
version = "0.11.1"
authors = ["Mrmaxmeier <Mrmaxmeier@gmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2.149"

[build-dependencies]
cc = "1.0.83"

[features]
default = ["tracy_enable"]

# tracy defines
tracy_enable = []
tracy_on_demand = []
tracy_no_exit = []
tracy_no_broadcast = []
